--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "motia": "^0.17.6-beta.187",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
+    "stripe": "^20.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
